components/markdown/tests/snapshots/codeblocks__can_render_multiple_shortcodes_in_codeblock.snap
---
source: components/rendering/tests/codeblocks.rs
assertion_line: 288
expression: body

---
<pre data-linenos style="background-color:#2b303b;color:#c0c5ce;"><code><table><tbody><tr><td>1</td><td><span>text1
</span></td></tr><tr><td>2</td><td><span>first
</span></td></tr><tr><td>3</td><td><span>text2
</span></td></tr><tr><td>4</td><td><span>second
</span></td></tr><tr><td>5</td><td><span>text3
</span></td></tr></tbody></table></code></pre>

