components/markdown/tests/snapshots/codeblocks__does_nothing_with_highlighting_disabled.snap
---
source: components/rendering/tests/codeblocks.rs
assertion_line: 336
expression: body

---
<pre><code>foo
bar
</code></pre>

